[Spring Boot With Aws][22. 12. 13] - Chapter 08
- 설정 추가 : S3버킷 설정 오탈자 수정

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ deploy:
     skip_cleanup: true
     acl: private
     local_dir: deploy
-    wait_until-deployd: true
+    wait_until-deployed: true
+
 
 #CI 실행 완료시 매일로 알람
 notifications:
