[Spring Boot With Aws][22. 12. 13] - Chapter 08
- 설정 추가 : S3버킷 설정 브랜치 추가 설정.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,8 @@ deploy:
     acl: private
     local_dir: deploy
     wait_until-deployed: true
-
+    on:
+      all_branches: true
 
 #CI 실행 완료시 매일로 알람
 notifications:
