[Spring Boot With Aws][22. 12. 13] - Chapter 08
- 설정 추가 : S3버킷 설정 zip파일 Repository명으로 수정2

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r SpringBoot-With-Aws
+  - zip -r demo
   - mkdir -p deploy
-  - mv SpringBoot-With-Aws.zip deploy/SpringBoot-With-Aws.zip
+  - mv demo.zip deploy/demo.zip
 
 deploy:
   - provider: s3
