[Spring Boot With Aws][22. 12. 13] - Chapter 08
- 설정 추가 : 프로젝트명 변경

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r demo
+  - zip -r jong1-springboot-webservice
   - mkdir -p deploy
-  - mv demo.zip deploy/demo.zip
+  - mv jong1-springboot-webservice.zip deploy/jong1-springboot-webservice.zip
 
 deploy:
   - provider: s3
