[Spring Boot With Aws][22. 12. 13] - Chapter 08
- 설정 추가 : 상황 파악 위한 명령어 추가

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
+  - ll ./
+  - echo pwd
   - zip -r jong1-springboot-webservice
   - mkdir -p deploy
   - mv jong1-springboot-webservice.zip deploy/jong1-springboot-webservice.zip
