--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r SpringBoot-With-Aws
+  - zip -r jong1-springboot-webservice *
   - mkdir -p deploy
-  - mv SpringBoot-With-Aws.zip deploy/SpringBoot-With-Aws.zip
+  - mv jong1-springboot-webservice.zip deploy/jong1-springboot-webservice.zip
 
 deploy:
   - provider: s3
