--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,9 @@ deploy:
     deployment_group: jong1-springboot-webservice-group
     region: ap-northeast-2
     wait-until-deployed: true
+    #설정 추가 참고 : https://prod.velog.io/@kji306301/AWS-%EC%98%A4%EB%A5%98-Travis-CI-S3-%EC%97%90-%EA%B0%84-%ED%8C%8C%EC%9D%BC%EC%9D%B4-CodeDeploy%EC%97%90-%EB%B0%B0%ED%8F%AC%EB%90%98%EC%A7%80-%EC%95%8A%EC%9D%84-%EB%95%8C
+    on:
+      all_branches: true
 
 #CI 실행 완료시 매일로 알람
 notifications:
