--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,13 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r jong1-springboot-webservice *
-  - mkdir -p deploy
-  - mv jong1-springboot-webservice.zip deploy/jong1-springboot-webservice.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/jong1-springboot-webservice.zip
 
 deploy:
   - provider: s3
